[gd_scene load_steps=3 format=2]

[ext_resource path="res://MapContainer/RightPanelRow.gd" type="Script" id=1]
[ext_resource path="res://assets/icon.png" type="Texture" id=2]

[node name="RightPanelRow" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 110 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 92.0

[node name="Icon" type="TextureRect" parent="HBoxContainer"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 68.0
margin_right = 1024.0
margin_bottom = 92.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TitleLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_right = 956.0
margin_bottom = 14.0
text = "Title"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 956.0
margin_bottom = 32.0

[node name="SpeedLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 956.0
margin_bottom = 50.0

[node name="AttackLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 956.0
margin_bottom = 68.0

[node name="PowersLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 956.0
margin_bottom = 86.0

[node name="ProgressBar" type="ProgressBar" parent="HBoxContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 956.0
margin_bottom = 92.0
percent_visible = false

[node name="LevelLabel" type="Label" parent="."]
margin_top = 96.0
margin_right = 1024.0
margin_bottom = 110.0

[node name="RefreshTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true
[connection signal="gui_input" from="." to="." method="_on_RightPanelRow_gui_input"]
[connection signal="timeout" from="RefreshTimer" to="." method="_on_RefreshTimer_timeout"]
